--- a/package.json
+++ b/package.json
@@ -4,6 +4,23 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.1"
-  }
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.4"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/0348711727/ecommerce_api_lv3.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/0348711727/ecommerce_api_lv3/issues"
+  },
+  "homepage": "https://github.com/0348711727/ecommerce_api_lv3#readme",
+  "description": ""
 }
