--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
   "name": "api",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.4"
-  },
+  "type": "module",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,9 +13,17 @@
     "url": "git+https://github.com/0348711727/ecommerce_api_lv3.git"
   },
   "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/0348711727/ecommerce_api_lv3/issues"
   },
   "homepage": "https://github.com/0348711727/ecommerce_api_lv3#readme",
-  "description": ""
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.4",
+    "nodemon": "^2.0.16"
+  }
 }
